third_party/move/move-compiler-v2/tests/lambda/storable/return_func.lambda.exp

Diagnostics:
error: type `|u64|u64 with copy` is missing required ability `store`
   ┌─ tests/lambda/storable/return_func.move:26:13
   │
26 │             double
   │             ^^^^^^

error: type `|u64|u64 with copy` is missing required ability `store`
   ┌─ tests/lambda/storable/return_func.move:28:13
   │
28 │             triple
   │             ^^^^^^

error: expected `|integer|_ with copy+store` but found a value of type `u64`
   ┌─ tests/lambda/storable/return_func.move:85:37
   │
85 │         vector::push_back(&mut sum, f(5));
   │                                     ^^^^

error: expected `|integer|_ with copy+store` but found a value of type `u64`
   ┌─ tests/lambda/storable/return_func.move:86:37
   │
86 │         vector::push_back(&mut sum, g(7));
   │                                     ^^^^

error: expected `|integer|_ with copy+store` but found a value of type `u64`
   ┌─ tests/lambda/storable/return_func.move:87:37
   │
87 │         vector::push_back(&mut sum, h(6));
   │                                     ^^^^

error: function type `|integer|_` is not allowed as a type argument (type was inferred)
   ┌─ tests/lambda/storable/return_func.move:89:21
   │
89 │         let funcs = vector[choose_function(0), choose_function(1), choose_function(2)];
   │                     ^^^^^^
   │
   = required by instantiating vector type parameter

error: function type `|u64|u64 with store` is not allowed as a type argument (type was inferred)
   ┌─ tests/lambda/storable/return_func.move:89:21
   │
89 │         let funcs = vector[choose_function(0), choose_function(1), choose_function(2)];
   │                     ^^^^^^
   │
   = required by instantiating vector type parameter
